--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,6 +25,7 @@
             </aside>
             <article>
                 <div id="csonak"></div>
+                <img src="kepek/csonak.png" alt=""/>
             </article>
             <aside id="jobb">
                 <h2>Jobb part</h2>
