--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="kecske.css" rel="stylesheet" type="text/css"/>
-        <script src="kecske.js" type="text/javascript"></script>
+        <script src="javascript.js" type="text/javascript"></script>
+        
     </head>
     <body>
         <main>
